--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "jsdom": "^8.1.0",
+    "less-middleware": "^2.1.0",
     "morgan": "~1.6.1",
     "node-jsdom": "^3.1.5",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "jsdom": "^8.1.0",
     "node-jsdom": "^3.1.5",
     "request": "^2.69.0"
   }
